@@ -1,16 +1,14 @@
-from __future__ import division
-import os
-import sqlite3
-import time
-import datetime
 import urllib
 
-from xdg.BaseDirectory import xdg_config_home
+import gtk
 from gettext import gettext as _
 
-from base import *
-from ..utils.wrandom import WeightedRandom
-from ..utils.iconimage import IconImage
+from ..base import PhotoList, PhotoSourceUI, PhotoSourceOptionsUI, \
+    Photo, PluginBase
+from ...utils.wrandom import WeightedRandom
+from ...utils.iconimage import IconImage
+from sqldb import FSpotDB, FSpotPhotoSQL
+from rating import RateList
 
 def info():
     return [FSpotPlugin, FSpotPhotoList, PhotoSourceFspotUI]
@@ -92,86 +90,6 @@ class FSpotPhotoList(PhotoList):
             _('Rate'), rate_min, rate_max, _('Period'), period)
         return tip
 
-class FSpotPhotoSQL(object):
-
-    def __init__(self, target=None, period=None):
-        self.period = period
-
-        tag_list= FSpotTagList()
-        self.tag_list = tag_list.get(target)
-
-    def get_statement(self, select, rate_name=None, min=0, max=5):
-        sql = ['SELECT %s FROM photos P' % select]
-        sql += self._tag()
-        sql.append(self._rate(rate_name, min, max))
-        sql.append(self._period(self.period))
-
-        search = False
-        for num, statement in enumerate(sql):
-            if not statement: continue
-            if search:
-                sql[num] = sql[num].replace("WHERE", "AND")
-            if statement.startswith("WHERE"):
-                search = True
-
-        return " ".join(sql)
-
-    def _tag(self):
-        if not self.tag_list: return ""
-
-        join = 'INNER JOIN photo_tags PT ON PT.photo_id=P.id'
-        tag = "WHERE tag_id IN (%s)" % ", ".join(map(str, self.tag_list))
-
-        return join, tag
-
-    def _rate(self, rate_name=None, min=0, max=5):
-        if rate_name is not None: 
-            sql = 'WHERE rating=%s' % str(rate_name)
-        elif not (min == 0 and max == 5):
-            sql = 'WHERE (rating BETWEEN %s AND %s)' % (min, max)
-        else:
-            sql = ""
-        return sql
-
-    def _period(self, period):
-        if not period: return ""
-
-        period_days = self.get_period_days(period)
-        d = datetime.datetime.now() - datetime.timedelta(days=period_days)
-        epoch = int(time.mktime(d.timetuple()))
-
-        sql = 'WHERE time>%s' % epoch
-        return sql
-
-    def get_period_days(self, period):
-        period_dic = {0 : 0, 1 : 7, 2 : 30, 3 : 90, 4 : 180, 5 : 360}
-        period_days = period_dic[period]
-        return period_days 
-
-class FSpotTagList(object):
-
-    def __init__(self):
-        self.db = FSpotDB()
-        self.tag_list = []
-
-    def get(self, target):
-        if not target: return []
-
-        sql = 'SELECT id FROM tags WHERE name="%s"' % str(target)
-        id = self.db.fetchone(sql)
-        self._get_with_category_id(id)
-
-        self.db.close()
-        return self.tag_list
-        
-    def _get_with_category_id(self, id):
-        self.tag_list.append(id)
-        sql = 'SELECT id FROM tags WHERE category_id=%s' % id
-        list = self.db.fetchall(sql)
-        if list:
-            for i in list:
-                self._get_with_category_id(i[0])
-
 class PhotoSourceFspotUI(PhotoSourceUI):
 
     def get(self):
@@ -240,46 +158,6 @@ class PhotoSourceOptionsFspotUI(PhotoSourceOptionsUI):
         period = self.options.get('period', 0)
         self.gui.get_widget('combobox_fs1').set_active(period)
 
-class FSpotDB(object):
-
-    def __init__(self):
-        db_file, self.is_new = self._get_db_file()
-        self.is_accessible = True if db_file else False
-        if db_file:
-            self.db = sqlite3.connect(db_file) 
-
-    def fetchall(self, sql):
-        data = self.db.execute(sql).fetchall()
-        return data
-
-    def fetchone(self, sql):
-        data = self.db.execute(sql).fetchone()[0]
-        return data
-
-    def execute(self, sql):
-        data = self.db.execute(sql)
-        return data
-
-    def commit(self):
-        self.db.commit()
-
-    def close(self):
-        self.db.close()
-
-    def _get_db_file(self):
-        db_file_base = 'f-spot/photos.db'
-        db_file_new = os.path.join(xdg_config_home, db_file_base)
-        db_file_old = os.path.join(os.environ['HOME'], '.gnome2', db_file_base)
-
-        if os.access(db_file_new, os.R_OK):
-            db_file, is_new = db_file_new, True
-        elif os.access(db_file_old, os.R_OK):
-            db_file, is_new = db_file_old, False
-        else:
-            db_file = is_new = None
-
-        return db_file, is_new
-
 class FSpotPhotoTags(object):
     "Sorted F-Spot Photo Tags"
 
@@ -313,73 +191,6 @@ class FSpotPhotoTags(object):
             
         if unadded_tags:
             self._sort_tags(unadded_tags, ex_tags)
-
-class RateList(list):
-
-    def __init__(self, sql, options, photolist):
-        super(RateList, self).__init__()
-
-        self.db  = FSpotDB()
-        self.sql = sql
-        self.photolist = photolist
-        self.raw_list = []
-
-        if not self.db.is_accessible:
-            self.total = 0
-            return
-
-        self.rate_min = options.get('rate_min', 0)
-        self.rate_max = options.get('rate_max', 5)
-        weight   = options.get('rate_weight', 2)
-
-        sql = self.sql.get_statement(
-            'rating, COUNT(*)', None, 
-            self.rate_min, self.rate_max) + ' GROUP BY rating'
-        count_list = self.db.fetchall(sql)
-        self.total = sum(x[1] for x in count_list)
-
-        # initialize all rate couter as 0
-        count_dic = dict([(x, 0) for x in xrange(6)])
-        count_dic.update(dict(count_list))
-
-        for rate, total_in_this in count_dic.items():
-            rate_info = Rate(rate, total_in_this, self.total, weight)
-            self.raw_list.append(rate_info)
-
-        self.set_random_weight()
-
-    def update_rate(self, old, new):
-        for rate in self.raw_list:
-            rate.total += 1 if rate.name == new \
-                else -1 if rate.name == old else 0
-        self.set_random_weight()
-
-    def set_random_weight(self):
-        del self[0:]
-
-        for rate in self.raw_list:
-            if rate.total > 0 and self.rate_min <= rate.name <= self.rate_max:
-                self.append(rate)
-
-        self.random = WeightedRandom(self)
-
-    def get_random_weight(self):
-        rate = self.random()
-        return rate
-
-class Rate(object):
-
-    def __init__(self, rate, total_in_this, total_all, weight_mag=2):
-        self.name = rate
-        self.total = total_in_this
-        self.total_all = total_all
-        self.weight_mag = weight_mag
-
-    def _get_weight(self):
-        weight = self.total / self.total_all * (self.name * self.weight_mag + 1)
-        return weight
-
-    weight = property(_get_weight, None)
 
 class FSpotFav(object):
 
