@@ -7,7 +7,7 @@ lib/preferences.py
 lib/plugins/base.py
 lib/plugins/flickr/api.py
 lib/plugins/flickr/authdialog.py
-lib/plugins/fspot.py
+lib/plugins/fspot/__init__.py
 lib/plugins/picasa.py
 lib/plugins/tumblr.py
 lib/plugins/rss.py
