@@ -17,7 +17,8 @@ setup(name = 'gphotoframe',
       license = 'GPL3',
       package_dir = {'gphotoframe' : 'lib'},
       packages = ['gphotoframe', 'gphotoframe.utils', 'gphotoframe.photoimage',
-                  'gphotoframe.plugins', 'gphotoframe.plugins.flickr'],
+                  'gphotoframe.plugins', 'gphotoframe.plugins.flickr',
+                  'gphotoframe.plugins.fspot'],
       scripts = ['gphotoframe'],
       data_files = [('share/gphotoframe', 
                      ['share/gphotoframe.glade', 'share/rss-16.png']),
