@@ -1,5 +1,6 @@
 2010-04-14  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
+	* fspot/__init__.py, rating.py, sqldb.py: Divided fspot.py.
 	* fspot.py: Added support for random photos with support for rate
 	  changing.
 
